tests/ui/borrowck/borrowck-or-init.stderr
error[E0381]: used binding `i` is possibly-uninitialized
  --> $DIR/borrowck-or-init.rs:5:20
   |
LL |     let i: isize;
   |         - binding declared here but left uninitialized
LL |
LL |     println!("{}", false || { i = 5; true });
   |                               ----- binding initialized here in some conditions
LL |     println!("{}", i);
   |                    ^ `i` used here but it is possibly-uninitialized

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
